[gd_scene load_steps=2 format=1]

[ext_resource path="res://addons/advanced_project_manager/views/dock/view_dock.gd" type="Script" id=1]

[node name="Project Manager" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="dlg_error" type="AcceptDialog" parent="."]

visibility/visible = false
anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 175.0
margin/top = 126.0
margin/right = 120.0
margin/bottom = 68.0
popup/exclusive = false
window/title = "Alert!"
dialog/hide_on_ok = true

[node name="pnl_templates" type="Control" parent="."]

visibility/visible = false
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="grid_main" type="VBoxContainer" parent="pnl_templates"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
alignment = 0

[node name="opt_project_type" type="OptionButton" parent="pnl_templates/grid_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 20.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "2D Project"
flat = false
align = 0
selected = 0
items = [ "2D Project", null, false, 3, null ]

[node name="btn_create" type="Button" parent="pnl_templates/grid_main"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 1024.0
margin/bottom = 44.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Create Project"
flat = false

[node name="pnl_project" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="tree_project" type="Tree" parent="pnl_project"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[connection signal="pressed" from="pnl_templates/grid_main/btn_create" to="." method="_on_btn_create_pressed"]


